added ui references

--- a/_data/references.yml
+++ b/_data/references.yml
@@ -60,6 +60,14 @@ references:
   url: https://code.visualstudio.com/
 - name: VS Code Intro Videos 
   url: https://code.visualstudio.com/docs/getstarted/introvideos
+- name: Quick and easy UI tips
+  url: https://twitter.com/i/events/968521944004943872
+- name: More UI tips
+  url: https://twitter.com/i/events/880688233641848832
+- name: Usability
+  url: https://www.nngroup.com/articles/ten-usability-heuristics/
+- name: UX
+  url: https://www.learnui.design/blog/4-rules-intuitive-ux.html
 
 
 
