--- a/_data/references.yml
+++ b/_data/references.yml
@@ -68,6 +68,10 @@ references:
   url: https://www.nngroup.com/articles/ten-usability-heuristics/
 - name: UX
   url: https://www.learnui.design/blog/4-rules-intuitive-ux.html
+- name: Figma
+  url:  https://www.figma.com/
+- name: 12 Critical Elements Every Website Homepage Must Have
+  url: https://blog.hubspot.com/blog/tabid/6307/bid/31097/12-critical-elements-every-homepage-must-have-infographic.aspx
 
 
 
