--- a/_data/organizers.yml
+++ b/_data/organizers.yml
@@ -19,6 +19,16 @@ organizers:
     twitter:        https://twitter.com/lhaydenecsu
     github:         https://hackhpc.github.io/ 
 
+  - name:           Charlie Dey
+    affiliation:    "Texas Advanced Computing Center"
+    site:           https://www.tacc.utexas.edu/about/directory/charlie-dey
+    linkedin:       https://www.linkedin.com/in/charlie-dey-0031317a/
+    avatar:         assets/images/charlie-dey.jpeg
+    bio:            "Charlie Dey(he/him) is the Director of Training and Professional Development with the User Services group at the Texas Advanced Computing Center(TACC) with a background in web development and scientific computing.  Charlie’s responsibilities at TACC include organizing, developing content, and building curriculums for TACC’s academic course selection taught in conjunction with several departments at the University of Texas at Austin, as well as for TACC’s professional development and educational training. Prior to joining TACC, he worked as a Senior Application Developer for the Carle Foundation Hospital, and as a computer science instructor at Parkland College in Champaign, IL.  He was also a member of a specialized application development team at the University of Illinois and has been a contracted research consultant for NASA Ames Research Center, studying computational immunology and bioinformatics. Charlie holds a Bachelor’s Degree concentrating in Computer Science and Biology from Eastern Illinois University, and certifications in 3D programing and visualization. He is currently finishing up a Master’s of Science in Cybersecurity."
+    email:          charlie@tacc.utexas.edu
+    twitter:        https://twitter.com/DeyCharlie
+    github:         https://github.com/ubik10
+  
   - name:           Alexander Nolte
     affiliation:    "University of Tartu"
     site:           https://alexandernolte.github.io/
@@ -34,7 +44,7 @@ organizers:
     site:           https://jeaimehp.github.io/
     linkedin:       https://www.linkedin.com/in/jeaimehp/
     avatar:         assets/images/jeaime-sq.png
-    bio:            "Je’aime is a Systems Administrator and a researcher at the Texas Advanced Computing Center. When not working on high-perfomance/cloud compute systems or mentoring students you can find him designing, creating, and/or deploying enviromental sensors."
+    bio:            "Je’aime Powell currently works as a Senior Systems Administrator and Technical Research Design Analyst at the Texas Advanced Computing Center(TACC) within the University of Texas at Austin. While supporting high-performance computing users, he also leads hackathons, STEM-based high school summer camps, and facilitates related training sessions. His research in the fields of Intelligent Systems and Decision Systems Support with a focus on the development of adaptive IoT environmental sensors. He holds both a Master’s degree in Applied Mathematics with a Concentration in Remote Sensing and a Bachelor’s in Computer Science from Elizabeth City State University."
     email:          jpowell@tacc.utexas.edu
     twitter:        https://twitter.com/jeaimehp
     github:         https://github.com/jeaimehp 
@@ -48,3 +58,13 @@ organizers:
     email:          boyd@omnibond.com
     twitter:        https://twitter.com/boydwilson/
     github:         https://github.com/omnibond/
+
+  - name:           Alexander Nolte
+    affiliation:    "University of Tartu"
+    site:           https://alexandernolte.github.io/
+    linkedin:       https://www.linkedin.com/in/alexandernolte/
+    avatar:         assets/images/alex.jpeg
+    bio:            "Alex is an Associate Professor at the University of Tartu and an Adjunct Associate Professor at Carnegie Mellon University working in the are of human computer interaction. He is an avid hackathon enthusiast and has participated in, co-organized, served as a mentor and studied countless hackathons over the past years with no end in sight. Outside of work he fiddles with any gadget he can get his hand on, plays video games, cooks and does BBQ."
+    email:          alexander.nolte@ut.ee
+    twitter:        https://twitter.com/alexander_nolte/
+    github:         https://github.com/alexandernolte
