added uiux resources

--- a/_data/references.yml
+++ b/_data/references.yml
@@ -115,3 +115,5 @@ dashboards:
   url: https://devcenter.heroku.com/articles/github-integration
 - name: Dash guidance / command line (scroll past Enterprise information to Heroku / free section
   url: https://dash.plotly.com/deployment
+- name: 4 Rules for Intuitive UX
+  url: https://www.learnui.design/blog/4-rules-intuitive-ux.html
