--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ registration_link: "https://forms.gle/Fa3TuD9UmRvs6G6HA"
 #   "Copyright (c) 2017-{currentYear} <a href="https://example.com">{author}</a>"
 #   "Copyright © 2017-2021 Foobar"
 #
-copyright: "Copyright (cleft) 2018-{currentYear} {title} {author} All rights reserved."
+copyright: "Copyright (cleft) 2018-{currentYear} HackHPC All rights reserved."
 
 description: > # this means to ignore newlines until "baseurl:"
   This page will serve as the event site for the HackHPC@ADMI23 
