added data miners github

--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -45,6 +45,13 @@ teams:
       url: teams/dataminers/dataminersResources.pdf
       icon: fa-regular fa-file-pdf
       iconcolor: red
+    - name: Team GitHub Repo
+      url: https://github.com/Lolli1486/agency-jekyll-theme
+      icon: fa-brands fa-github
+      iconcolor: black
+    - name: Team Portal Demo
+      url: fa-solid fa-globe
+      iconcolor: slategrey
   images:
     - name: Team Introduction
       url: "teams/dataminers/team_introduction.pdf"
@@ -115,6 +122,13 @@ teams:
       url: teams/codewarriors/codewarriorsResources.pdf
       icon: fa-regular fa-file-pdf
       iconcolor: red
+    #- name: Team GitHub Repo
+    #  url: https://github.com/Lolli1486/agency-jekyll-theme
+    #  icon: fa-brands fa-github
+    #  iconcolor: black
+    #- name: Team Portal Demo
+    #  url: fa-solid fa-globe
+    #  iconcolor: slategrey
   images:
     - name: Team Introduction
       url: "teams/codewarriors/team_introduction.pdf"
@@ -193,6 +207,13 @@ teams:
       url: teams/bugbusters/bugbustersResources.pdf
       icon: fa-regular fa-file-pdf
       iconcolor: red
+    #- name: Team GitHub Repo
+    #  url: https://github.com/Lolli1486/agency-jekyll-theme
+    #  icon: fa-brands fa-github
+    #  iconcolor: black
+    #- name: Team Portal Demo
+    #  url: fa-solid fa-globe
+    #  iconcolor: slategrey
   images:
     - name: Team Introduction
       url: "teams/bugbusters/team_introduction.pdf"
