added bug busters

--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -213,7 +213,7 @@ teams:
       icon: fa-brands fa-github
       iconcolor: black
     - name: Team Portal Demo
-      url: https://lolli1486.github.io/agency-jekyll-theme/
+      url: https://cierrahw.github.io/Hacking4HPC/
       icon: fa-solid fa-globe
       iconcolor: slategrey
   images:
