--- a/_data/teams.yml
+++ b/_data/teams.yml
@@ -123,13 +123,14 @@ teams:
       url: teams/codewarriors/codewarriorsResources.pdf
       icon: fa-regular fa-file-pdf
       iconcolor: red
-    #- name: Team GitHub Repo
-    #  url: https://github.com/Lolli1486/agency-jekyll-theme
-    #  icon: fa-brands fa-github
-    #  iconcolor: black
-    #- name: Team Portal Demo
-    #  url: fa-solid fa-globe
-    #  iconcolor: slategrey
+    - name: Team GitHub Repo
+      url: https://github.com/admi1234567/ADMI_CODEWARRIORS
+      icon: fa-brands fa-github
+      iconcolor: black
+    - name: Team Portal Demo
+      url: http://www.vartechservices.com/codewarriors/
+      icon: fa-solid fa-globe
+      iconcolor: slategrey
   images:
     - name: Team Introduction
       url: "teams/codewarriors/team_introduction.pdf"
