--- a/_data/schedule.yml
+++ b/_data/schedule.yml
@@ -84,9 +84,12 @@ general_schedule:
             icon: fa-regular fa-file-pdf
             url: "assets/slides/Team Introductions.pdf"
             iconcolor: red
+          - title: YouTube Video
+            icon: "fab fa-youtube" #fa-regular fa-file-pdf
+            iconcolor: red
+            url: "https://youtu.be/8bbOohYJumg"
 
           
-  
   - date: "2023-06-27T10:30(-04:00)"
     session: Morning
     length: 02:00
@@ -102,6 +105,7 @@ general_schedule:
       - name: Team Goals
         #type: Presentation 
         description: >
+          UX/UI Overview
           1-Slide/1-Minute with: <br>
           &nbsp;&nbsp; - Team Name <br>
           &nbsp;&nbsp; - Target Portal Name<br>
@@ -115,6 +119,10 @@ general_schedule:
             icon: fa-regular fa-file-pdf 
             url: "assets/slides/Team Goals.pdf"
             iconcolor: red
+          - title: YouTube Video
+            icon: "fab fa-youtube" #fa-regular fa-file-pdf
+            iconcolor: red
+            url: "https://youtu.be/7Z4VRvZJNgM"
 
 
   - date: "2023-06-27T15:30(-04:00)"
